🐛fix: mobile menu clipping and commandBox out of screen when overflowing

--- a/floating.css
+++ b/floating.css
@@ -46,6 +46,16 @@
     .notch {
         padding: 0px;
     }
+    
+.notch {
+    width: 13px;
+    height: 13px;
+}
+
+.notch:hover {
+    width: 18px;
+    height: 18px;
+}
       
 }
 
@@ -54,4 +64,12 @@
         margin-left: -1px;
     }
     
+}
+
+@media only screen and (max-width : 390px) {
+    .notch {
+        margin-left: -2px;
+    
+}
+
 }
