--- a/terminal.css
+++ b/terminal.css
@@ -46,5 +46,9 @@ pre {
     width: 50%;
   }
 
+  #terminal {
+    max-height: 90vh;
+  }
+
   
 }
